--- a/test/rosenbrock/Test Rosenbrock 50-10000 More Data.ipynb
+++ b/test/rosenbrock/Test Rosenbrock 50-10000 More Data.ipynb
@@ -186,17 +186,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 2576558.44\n",
-      "Epoch 1, Validation Loss: 1339702340898527379456.00\n",
-      "Epoch 2, Validation Loss: 540526.38\n",
-      "Epoch 3, Validation Loss: 501240182079488.00\n",
-      "Epoch 4, Validation Loss: 399044287299196157952.00\n",
-      "Epoch 5, Validation Loss: 103340.51\n",
-      "Epoch 6, Validation Loss: 126534.81\n",
-      "Early stopping at epoch 6\n",
+      "Epoch 0, Iters 0, Validation Loss: 2576558.44\n",
+      "Epoch 0, Iters 125, Validation Loss: 11011623.81\n",
+      "Epoch 0, Iters 250, Validation Loss: 1376246.12\n",
+      "Epoch 0, Iters 375, Validation Loss: 705293.87\n",
+      "Epoch 0, Iters 500, Validation Loss: 567785.90\n",
+      "Epoch 0, Iters 625, Validation Loss: 1040880.62\n",
+      "Epoch 0, Iters 750, Validation Loss: 66952333.50\n",
+      "Epoch 0, Iters 875, Validation Loss: 382868309.59\n",
+      "Epoch 0, Iters 1000, Validation Loss: 11365694.48\n",
+      "Epoch 0, Iters 1125, Validation Loss: 3237054981.83\n",
+      "Epoch 0, Iters 1250, Validation Loss: 1347419101629863952384.00\n",
+      "Epoch 1, Iters 1375, Validation Loss: 551715748641268563968.00\n",
+      "Epoch 1, Iters 1500, Validation Loss: 3876376581752.97\n",
+      "Epoch 1, Iters 1625, Validation Loss: 347415.50\n",
+      "Epoch 1, Iters 1750, Validation Loss: 266013027590651.94\n",
+      "Epoch 1, Iters 1875, Validation Loss: 1777489580002377728.00\n",
+      "Epoch 1, Iters 2000, Validation Loss: 455526440201915.06\n",
+      "Epoch 1, Iters 2125, Validation Loss: 12527389056179.08\n",
+      "Epoch 1, Iters 2250, Validation Loss: 344685.99\n",
+      "Epoch 1, Iters 2375, Validation Loss: 255178.60\n",
+      "Epoch 1, Iters 2500, Validation Loss: 899604.59\n",
+      "Epoch 2, Iters 2625, Validation Loss: 197023.22\n",
+      "Epoch 2, Iters 2750, Validation Loss: 189444.52\n",
+      "Epoch 2, Iters 2875, Validation Loss: 141255.17\n",
+      "Epoch 2, Iters 3000, Validation Loss: 115798.69\n",
+      "Epoch 2, Iters 3125, Validation Loss: 157471.72\n",
+      "Epoch 2, Iters 3250, Validation Loss: 200063.83\n",
+      "Epoch 2, Iters 3375, Validation Loss: 216558.37\n",
+      "Epoch 2, Iters 3500, Validation Loss: 116116.30\n",
+      "Epoch 2, Iters 3625, Validation Loss: 133820.03\n",
+      "Epoch 2, Iters 3750, Validation Loss: 202435.90\n",
+      "Epoch 3, Iters 3875, Validation Loss: 142733.51\n",
+      "Epoch 3, Iters 4000, Validation Loss: 533204.40\n",
+      "Epoch 3, Iters 4125, Validation Loss: 149564.92\n",
+      "Epoch 3, Iters 4250, Validation Loss: 123605.95\n",
+      "Epoch 3, Iters 4375, Validation Loss: 226298.56\n",
+      "Epoch 3, Iters 4500, Validation Loss: 585382.69\n",
+      "Epoch 3, Iters 4625, Validation Loss: 110976.44\n",
+      "Epoch 3, Iters 4750, Validation Loss: 193460.40\n",
+      "Epoch 3, Iters 4875, Validation Loss: 270659.90\n",
+      "Epoch 3, Iters 5000, Validation Loss: 126578.29\n",
+      "Epoch 4, Iters 5125, Validation Loss: 463392836498084593664.00\n",
+      "Epoch 4, Iters 5250, Validation Loss: 2491326289412194784247808.00\n",
+      "Epoch 4, Iters 5375, Validation Loss: 3039686010762494.00\n",
+      "Epoch 4, Iters 5500, Validation Loss: 30134757854.69\n",
+      "Epoch 4, Iters 5625, Validation Loss: 100586.25\n",
+      "Epoch 4, Iters 5750, Validation Loss: 680015.93\n",
+      "Epoch 4, Iters 5875, Validation Loss: 310321.54\n",
+      "Epoch 4, Iters 6000, Validation Loss: 176272.10\n",
+      "Epoch 4, Iters 6125, Validation Loss: 89519.40\n",
+      "Epoch 4, Iters 6250, Validation Loss: 141998820.90\n",
+      "Epoch 5, Iters 6375, Validation Loss: 1476626.37\n",
+      "Epoch 5, Iters 6500, Validation Loss: 541976163673267776.00\n",
+      "Epoch 5, Iters 6625, Validation Loss: 498836772073106309120.00\n",
+      "Epoch 5, Iters 6750, Validation Loss: 8150426794137583616.00\n",
+      "Epoch 5, Iters 6875, Validation Loss: 364272.44\n",
+      "Epoch 5, Iters 7000, Validation Loss: 511627.50\n",
+      "Epoch 5, Iters 7125, Validation Loss: 560447.66\n",
+      "Epoch 5, Iters 7250, Validation Loss: 2743511.58\n",
+      "Epoch 5, Iters 7375, Validation Loss: 24659625167716089856.00\n",
+      "Epoch 5, Iters 7500, Validation Loss: 27044761506488799371198464.00\n",
+      "Epoch 6, Iters 7625, Validation Loss: 307581281030.53\n",
+      "Epoch 6, Iters 7750, Validation Loss: 6386008270502363136.00\n",
+      "Epoch 6, Iters 7875, Validation Loss: 64154625479621936108384813056.00\n",
+      "Epoch 6, Iters 8000, Validation Loss: 300613874378081056883625426944.00\n",
+      "Epoch 6, Iters 8125, Validation Loss: 166447920325251.97\n",
+      "Epoch 6, Iters 8250, Validation Loss: 1150503008928343785472.00\n",
+      "Epoch 6, Iters 8375, Validation Loss: 1039466701801935061307050950656.00\n",
+      "Epoch 6, Iters 8500, Validation Loss: 11509278693367674.00\n",
+      "Epoch 6, Iters 8625, Validation Loss: 289599042817049536.00\n",
+      "Early stopping at iters 8626\n",
+      "Early stopping at iters 8627\n",
+      "Early stopping at iters 8628\n",
+      "Early stopping at iters 8629\n",
+      "Early stopping at iters 8630\n",
+      "Early stopping at iters 8631\n",
+      "Early stopping at iters 8632\n",
+      "Early stopping at iters 8633\n",
+      "Early stopping at iters 8634\n",
+      "Early stopping at iters 8635\n",
+      "Early stopping at iters 8636\n",
+      "Early stopping at iters 8637\n",
+      "Early stopping at iters 8638\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 729.85 sec.\n"
+      "The training time is 736.00 sec.\n"
      ]
     }
    ],
@@ -204,8 +279,8 @@
     "from src.problem.neuromancer.trainer import trainer\n",
     "# training\n",
     "epochs = 20                     # number of training epochs\n",
-    "warmup = 4                      # number of epochs to wait before enacting early stopping policy\n",
-    "patience = 2                    # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "warmup = 20                     # number of steps to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of steps with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
     "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
@@ -223,7 +298,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [02:12<00:00,  1.32s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [02:07<00:00,  1.28s/it]\n"
      ]
     },
     {
@@ -232,14 +307,14 @@
      "text": [
       "             Obj Val  Constraints Viol  Elapsed Time\n",
       "count     100.000000        100.000000    100.000000\n",
-      "mean    95759.540252         80.582337      0.044151\n",
-      "std     25220.983931        376.826839      0.005072\n",
-      "min     54937.879911          0.000000      0.011601\n",
-      "25%     74165.532897          0.000000      0.043885\n",
-      "50%     98379.755259          0.000000      0.044294\n",
-      "75%    108088.658106          0.000000      0.045039\n",
-      "max    187619.319466       2917.906137      0.050883\n",
-      "Number of infeasible solution: 10\n"
+      "mean    93201.643254          5.937882      0.044229\n",
+      "std     35598.842358         59.378825      0.005001\n",
+      "min     52855.305370          0.000000      0.012624\n",
+      "25%     68361.402574          0.000000      0.043846\n",
+      "50%     75160.501619          0.000000      0.044348\n",
+      "75%    113978.720713          0.000000      0.045244\n",
+      "max    180846.332872        593.788249      0.050292\n",
+      "Number of infeasible solution: 1\n"
      ]
     }
    ],
@@ -350,17 +425,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 2328965.64\n",
-      "Epoch 1, Validation Loss: 673405.49\n",
-      "Epoch 2, Validation Loss: 398912.97\n",
-      "Epoch 3, Validation Loss: 136826.71\n",
-      "Epoch 4, Validation Loss: 73052.83\n",
-      "Epoch 5, Validation Loss: 72865.71\n",
-      "Epoch 6, Validation Loss: 73388.84\n",
-      "Early stopping at epoch 6\n",
+      "Epoch 0, Iters 0, Validation Loss: 2328965.64\n",
+      "Epoch 0, Iters 125, Validation Loss: 10015729.44\n",
+      "Epoch 0, Iters 250, Validation Loss: 8090307680.00\n",
+      "Epoch 0, Iters 375, Validation Loss: 1131913.62\n",
+      "Epoch 0, Iters 500, Validation Loss: 124707385.38\n",
+      "Epoch 0, Iters 625, Validation Loss: 11801074925568.00\n",
+      "Epoch 0, Iters 750, Validation Loss: 8926565329010688.00\n",
+      "Epoch 0, Iters 875, Validation Loss: 162258480914432.00\n",
+      "Epoch 0, Iters 1000, Validation Loss: 649409132222218240.00\n",
+      "Epoch 0, Iters 1125, Validation Loss: 1028460576768.00\n",
+      "Epoch 0, Iters 1250, Validation Loss: 670135.68\n",
+      "Epoch 1, Iters 1375, Validation Loss: 741309.20\n",
+      "Epoch 1, Iters 1500, Validation Loss: 533692.67\n",
+      "Epoch 1, Iters 1625, Validation Loss: 1181530152158.00\n",
+      "Epoch 1, Iters 1750, Validation Loss: 9058761383936.00\n",
+      "Epoch 1, Iters 1875, Validation Loss: 1061128063878432817152.00\n",
+      "Epoch 1, Iters 2000, Validation Loss: 64452370181.43\n",
+      "Epoch 1, Iters 2125, Validation Loss: 3774534997057.81\n",
+      "Epoch 1, Iters 2250, Validation Loss: 365346.74\n",
+      "Epoch 1, Iters 2375, Validation Loss: 1114766.27\n",
+      "Epoch 1, Iters 2500, Validation Loss: 278548152615022511521792.00\n",
+      "Epoch 2, Iters 2625, Validation Loss: 1047900.02\n",
+      "Epoch 2, Iters 2750, Validation Loss: 175307.27\n",
+      "Epoch 2, Iters 2875, Validation Loss: 251380.10\n",
+      "Epoch 2, Iters 3000, Validation Loss: 371653592815.46\n",
+      "Epoch 2, Iters 3125, Validation Loss: 200191.25\n",
+      "Epoch 2, Iters 3250, Validation Loss: 356167.68\n",
+      "Epoch 2, Iters 3375, Validation Loss: 133171.57\n",
+      "Epoch 2, Iters 3500, Validation Loss: 472684.57\n",
+      "Epoch 2, Iters 3625, Validation Loss: 107749.46\n",
+      "Epoch 2, Iters 3750, Validation Loss: 6134001936675950821376.00\n",
+      "Epoch 3, Iters 3875, Validation Loss: 178624.69\n",
+      "Epoch 3, Iters 4000, Validation Loss: 2077894575082231960698880.00\n",
+      "Epoch 3, Iters 4125, Validation Loss: 647581309388482209120256.00\n",
+      "Epoch 3, Iters 4250, Validation Loss: inf\n",
+      "Epoch 3, Iters 4375, Validation Loss: 6950580981335150945107968.00\n",
+      "Epoch 3, Iters 4500, Validation Loss: 474307.84\n",
+      "Epoch 3, Iters 4625, Validation Loss: 3573382532004.43\n",
+      "Epoch 3, Iters 4750, Validation Loss: 1985740377024104759296.00\n",
+      "Epoch 3, Iters 4875, Validation Loss: 1494570481061883912650752.00\n",
+      "Epoch 3, Iters 5000, Validation Loss: 85651.75\n",
+      "Epoch 4, Iters 5125, Validation Loss: 135436.94\n",
+      "Epoch 4, Iters 5250, Validation Loss: 103049.83\n",
+      "Epoch 4, Iters 5375, Validation Loss: 205589.81\n",
+      "Epoch 4, Iters 5500, Validation Loss: 123332.45\n",
+      "Epoch 4, Iters 5625, Validation Loss: 90586.71\n",
+      "Epoch 4, Iters 5750, Validation Loss: 347648.78\n",
+      "Epoch 4, Iters 5875, Validation Loss: 74787.43\n",
+      "Epoch 4, Iters 6000, Validation Loss: 82917.40\n",
+      "Epoch 4, Iters 6125, Validation Loss: 60072.03\n",
+      "Epoch 4, Iters 6250, Validation Loss: 63832.14\n",
+      "Epoch 5, Iters 6375, Validation Loss: 73651.90\n",
+      "Epoch 5, Iters 6500, Validation Loss: 162395.48\n",
+      "Epoch 5, Iters 6625, Validation Loss: 88350.79\n",
+      "Epoch 5, Iters 6750, Validation Loss: 110176.70\n",
+      "Epoch 5, Iters 6875, Validation Loss: 91081.47\n",
+      "Epoch 5, Iters 7000, Validation Loss: 129838.07\n",
+      "Epoch 5, Iters 7125, Validation Loss: 63237.41\n",
+      "Epoch 5, Iters 7250, Validation Loss: 561984.68\n",
+      "Epoch 5, Iters 7375, Validation Loss: 444579.25\n",
+      "Epoch 5, Iters 7500, Validation Loss: 75781.28\n",
+      "Epoch 6, Iters 7625, Validation Loss: 117523.06\n",
+      "Epoch 6, Iters 7750, Validation Loss: 221985.76\n",
+      "Epoch 6, Iters 7875, Validation Loss: 62710.32\n",
+      "Epoch 6, Iters 8000, Validation Loss: 100289.27\n",
+      "Epoch 6, Iters 8125, Validation Loss: 170736.53\n",
+      "Epoch 6, Iters 8250, Validation Loss: 113071.26\n",
+      "Epoch 6, Iters 8375, Validation Loss: 73122.26\n",
+      "Epoch 6, Iters 8500, Validation Loss: 164709.14\n",
+      "Epoch 6, Iters 8625, Validation Loss: 69121.35\n",
+      "Early stopping at iters 8626\n",
+      "Early stopping at iters 8627\n",
+      "Early stopping at iters 8628\n",
+      "Early stopping at iters 8629\n",
+      "Early stopping at iters 8630\n",
+      "Early stopping at iters 8631\n",
+      "Early stopping at iters 8632\n",
+      "Early stopping at iters 8633\n",
+      "Early stopping at iters 8634\n",
+      "Early stopping at iters 8635\n",
+      "Early stopping at iters 8636\n",
+      "Early stopping at iters 8637\n",
+      "Early stopping at iters 8638\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 753.71 sec.\n"
+      "The training time is 756.69 sec.\n"
      ]
     }
    ],
@@ -368,8 +518,8 @@
     "from src.problem.neuromancer.trainer import trainer\n",
     "# training\n",
     "epochs = 20                     # number of training epochs\n",
-    "warmup = 4                      # number of epochs to wait before enacting early stopping policy\n",
-    "patience = 2                    # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
     "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
@@ -387,23 +537,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [02:13<00:00,  1.33s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [02:07<00:00,  1.28s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             Obj Val  Constraints Viol  Elapsed Time\n",
-      "count     100.000000        100.000000    100.000000\n",
-      "mean    61521.734982        133.032475      0.044225\n",
-      "std     19038.443301        514.326066      0.004346\n",
-      "min     31929.391276          0.000000      0.018198\n",
-      "25%     44516.574181          0.000000      0.043834\n",
-      "50%     62915.766867          0.000000      0.044484\n",
-      "75%     77266.372935          0.000000      0.045393\n",
-      "max    117067.699442       3003.132200      0.051054\n",
-      "Number of infeasible solution: 10\n"
+      "            Obj Val  Constraints Viol  Elapsed Time\n",
+      "count    100.000000             100.0    100.000000\n",
+      "mean   60497.329874               0.0      0.043434\n",
+      "std    12504.687773               0.0      0.007029\n",
+      "min    39604.485020               0.0      0.010867\n",
+      "25%    49361.541732               0.0      0.043601\n",
+      "50%    57232.160451               0.0      0.044234\n",
+      "75%    68858.006611               0.0      0.045418\n",
+      "max    94449.314669               0.0      0.050184\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
@@ -436,7 +586,7 @@
     "    elapseds.append(tock - tick)\n",
     "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
     "time.sleep(1)\n",
-    "df.to_csv(\"result/rb_lr_50-10000_l.csv\")\n",
+    "df.to_csv(\"result/rb_lt_50-10000_l.csv\")\n",
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
