--- a/test/rosenbrock/Test Rosenbrock 50-10000.ipynb
+++ b/test/rosenbrock/Test Rosenbrock 50-10000.ipynb
@@ -2462,7 +2462,7 @@
     "    elapseds.append(tock - tick)\n",
     "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
     "time.sleep(1)\n",
-    "df.to_csv(\"result/rb_lr_50-1000.csv\")\n",
+    "df.to_csv(\"result/rb_lr_50-10000.csv\")\n",
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
@@ -2703,7 +2703,7 @@
     "    elapseds.append(tock - tick)\n",
     "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
     "time.sleep(1)\n",
-    "df.to_csv(\"result/rb_lr_50-1000.csv\")\n",
+    "df.to_csv(\"result/rb_lt_50-10000.csv\")\n",
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
