Update MILP Vary RHS Series2.ipynb

--- a/MILP Vary RHS Series2.ipynb
+++ b/MILP Vary RHS Series2.ipynb
@@ -516,7 +516,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:32<00:00,  3.27s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:31<00:00,  3.19s/it]\n"
      ]
     },
     {
@@ -525,14 +525,14 @@
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
       "count     10.000000              10.0     10.000000\n",
-      "mean  -17169.485687               0.0      3.257836\n",
-      "std        1.269903               0.0      0.347903\n",
-      "min   -17171.525260               0.0      2.712321\n",
-      "25%   -17170.355450               0.0      3.022019\n",
-      "50%   -17169.264223               0.0      3.287408\n",
-      "75%   -17168.411405               0.0      3.404324\n",
-      "max   -17167.980247               0.0      3.987588\n",
-      "Total elapsed time for optimization: 32.58 seconds\n"
+      "mean  -17169.485687               0.0      3.181426\n",
+      "std        1.269903               0.0      0.327022\n",
+      "min   -17171.525260               0.0      2.711195\n",
+      "25%   -17170.355450               0.0      2.987767\n",
+      "50%   -17169.264223               0.0      3.152138\n",
+      "75%   -17168.411405               0.0      3.309585\n",
+      "max   -17167.980247               0.0      3.840564\n",
+      "Total elapsed time for optimization: 31.81 seconds\n"
      ]
     }
    ],
@@ -583,7 +583,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:01<00:00,  5.73it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 10/10 [00:01<00:00,  5.02it/s]\n"
      ]
     },
     {
@@ -592,14 +592,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count    10.000000              10.0     10.000000\n",
-      "mean  -7409.652066               0.0      0.168594\n",
-      "std       0.084518               0.0      0.009324\n",
-      "min   -7409.778049               0.0      0.158386\n",
-      "25%   -7409.713027               0.0      0.161828\n",
-      "50%   -7409.647334               0.0      0.168466\n",
-      "75%   -7409.586088               0.0      0.170633\n",
-      "max   -7409.530987               0.0      0.190636\n",
-      "Total elapsed time for optimization: 1.69 seconds\n"
+      "mean  -7409.652066               0.0      0.192169\n",
+      "std       0.084518               0.0      0.021025\n",
+      "min   -7409.778049               0.0      0.169585\n",
+      "25%   -7409.713027               0.0      0.177880\n",
+      "50%   -7409.647334               0.0      0.185786\n",
+      "75%   -7409.586088               0.0      0.206422\n",
+      "max   -7409.530987               0.0      0.225899\n",
+      "Total elapsed time for optimization: 1.92 seconds\n"
      ]
     }
    ],
@@ -926,105 +926,10 @@
       "Epoch 100, Iters 12625, Training Loss: 2056.86, Validation Loss: -10387.59\n",
       "Epoch 101, Iters 12750, Training Loss: -1425.80, Validation Loss: -8421.30\n",
       "Epoch 102, Iters 12875, Training Loss: -1516.50, Validation Loss: -10193.94\n",
-      "Epoch 103, Iters 13000, Training Loss: 256.31, Validation Loss: -9485.50\n",
-      "Epoch 104, Iters 13125, Training Loss: -2684.17, Validation Loss: -10270.75\n",
-      "Epoch 105, Iters 13250, Training Loss: -1926.85, Validation Loss: -5734.04\n",
-      "Epoch 106, Iters 13375, Training Loss: -2916.62, Validation Loss: -9833.84\n",
-      "Epoch 107, Iters 13500, Training Loss: -3025.17, Validation Loss: -10427.52\n",
-      "Epoch 108, Iters 13625, Training Loss: -433.13, Validation Loss: -10071.71\n",
-      "Epoch 109, Iters 13750, Training Loss: 1549.64, Validation Loss: -10472.80\n",
-      "Epoch 110, Iters 13875, Training Loss: -2729.31, Validation Loss: -10294.50\n",
-      "Epoch 111, Iters 14000, Training Loss: -2295.11, Validation Loss: -9766.75\n",
-      "Epoch 112, Iters 14125, Training Loss: -5041.76, Validation Loss: -10027.17\n",
-      "Epoch 113, Iters 14250, Training Loss: -1080.49, Validation Loss: -10203.31\n",
-      "Epoch 114, Iters 14375, Training Loss: -3411.23, Validation Loss: -9591.91\n",
-      "Epoch 115, Iters 14500, Training Loss: -4576.20, Validation Loss: -10617.33\n",
-      "Epoch 116, Iters 14625, Training Loss: -2469.72, Validation Loss: -8601.35\n",
-      "Epoch 117, Iters 14750, Training Loss: -240.14, Validation Loss: -9839.09\n",
-      "Epoch 118, Iters 14875, Training Loss: -4314.97, Validation Loss: -9865.74\n",
-      "Epoch 119, Iters 15000, Training Loss: -2478.14, Validation Loss: -2552.21\n",
-      "Epoch 120, Iters 15125, Training Loss: 1345.71, Validation Loss: -10470.25\n",
-      "Epoch 121, Iters 15250, Training Loss: -4488.57, Validation Loss: -10467.07\n",
-      "Epoch 122, Iters 15375, Training Loss: -3727.88, Validation Loss: -9790.68\n",
-      "Epoch 123, Iters 15500, Training Loss: -3528.92, Validation Loss: -10411.24\n",
-      "Epoch 124, Iters 15625, Training Loss: -2381.64, Validation Loss: -10328.14\n",
-      "Epoch 125, Iters 15750, Training Loss: -3016.36, Validation Loss: -8960.22\n",
-      "Epoch 126, Iters 15875, Training Loss: -3263.06, Validation Loss: -9874.41\n",
-      "Epoch 127, Iters 16000, Training Loss: 239.54, Validation Loss: -10325.96\n",
-      "Epoch 128, Iters 16125, Training Loss: -4021.93, Validation Loss: -10571.95\n",
-      "Epoch 129, Iters 16250, Training Loss: -4786.24, Validation Loss: -6953.99\n",
-      "Epoch 130, Iters 16375, Training Loss: -2078.19, Validation Loss: -9380.43\n",
-      "Epoch 131, Iters 16500, Training Loss: 2092.49, Validation Loss: -9862.33\n",
-      "Epoch 132, Iters 16625, Training Loss: -1624.69, Validation Loss: -9944.92\n",
-      "Epoch 133, Iters 16750, Training Loss: -3622.00, Validation Loss: -10044.16\n",
-      "Epoch 134, Iters 16875, Training Loss: -1888.44, Validation Loss: -10637.22\n",
-      "Epoch 135, Iters 17000, Training Loss: -3688.32, Validation Loss: -8595.84\n",
-      "Epoch 136, Iters 17125, Training Loss: -4241.12, Validation Loss: -10482.23\n",
-      "Epoch 137, Iters 17250, Training Loss: -4777.50, Validation Loss: -10591.17\n",
-      "Epoch 138, Iters 17375, Training Loss: -1543.74, Validation Loss: -10551.52\n",
-      "Epoch 139, Iters 17500, Training Loss: -3631.80, Validation Loss: -10067.30\n",
-      "Epoch 140, Iters 17625, Training Loss: -4245.78, Validation Loss: -10191.18\n",
-      "Epoch 141, Iters 17750, Training Loss: -4717.08, Validation Loss: -10122.49\n",
-      "Epoch 142, Iters 17875, Training Loss: -2164.49, Validation Loss: -9794.58\n",
-      "Epoch 143, Iters 18000, Training Loss: -2596.06, Validation Loss: -9687.56\n",
-      "Epoch 144, Iters 18125, Training Loss: -2941.01, Validation Loss: -10125.06\n",
-      "Epoch 145, Iters 18250, Training Loss: -3746.89, Validation Loss: -10809.90\n",
-      "Epoch 146, Iters 18375, Training Loss: 111.29, Validation Loss: -10412.98\n",
-      "Epoch 147, Iters 18500, Training Loss: -1505.03, Validation Loss: -10628.31\n",
-      "Epoch 148, Iters 18625, Training Loss: -3479.03, Validation Loss: -10819.33\n",
-      "Epoch 149, Iters 18750, Training Loss: -3702.85, Validation Loss: -10546.74\n",
-      "Epoch 150, Iters 18875, Training Loss: -3612.10, Validation Loss: -10575.64\n",
-      "Epoch 151, Iters 19000, Training Loss: -5198.01, Validation Loss: -10637.80\n",
-      "Epoch 152, Iters 19125, Training Loss: 187.23, Validation Loss: -10007.41\n",
-      "Epoch 153, Iters 19250, Training Loss: -219.82, Validation Loss: -9495.65\n",
-      "Epoch 154, Iters 19375, Training Loss: -3845.11, Validation Loss: -10341.16\n",
-      "Epoch 155, Iters 19500, Training Loss: -1576.05, Validation Loss: -10309.59\n",
-      "Epoch 156, Iters 19625, Training Loss: -4141.86, Validation Loss: -8673.41\n",
-      "Epoch 157, Iters 19750, Training Loss: -4797.75, Validation Loss: -10785.90\n",
-      "Epoch 158, Iters 19875, Training Loss: -3957.69, Validation Loss: -10279.09\n",
-      "Epoch 159, Iters 20000, Training Loss: -4887.33, Validation Loss: -10095.35\n",
-      "Epoch 160, Iters 20125, Training Loss: -3771.16, Validation Loss: -10482.53\n",
-      "Epoch 161, Iters 20250, Training Loss: -1413.43, Validation Loss: -10379.80\n",
-      "Epoch 162, Iters 20375, Training Loss: 1711.70, Validation Loss: -6528.62\n",
-      "Epoch 163, Iters 20500, Training Loss: -786.58, Validation Loss: -10767.04\n",
-      "Epoch 164, Iters 20625, Training Loss: -4437.97, Validation Loss: -9808.95\n",
-      "Epoch 165, Iters 20750, Training Loss: -3136.59, Validation Loss: -10416.53\n",
-      "Epoch 166, Iters 20875, Training Loss: -4706.64, Validation Loss: -10513.10\n",
-      "Epoch 167, Iters 21000, Training Loss: -2240.56, Validation Loss: -10978.33\n",
-      "Epoch 168, Iters 21125, Training Loss: -1658.62, Validation Loss: -10880.27\n",
-      "Epoch 169, Iters 21250, Training Loss: -6285.99, Validation Loss: -9710.78\n",
-      "Epoch 170, Iters 21375, Training Loss: -3486.01, Validation Loss: -10622.46\n",
-      "Epoch 171, Iters 21500, Training Loss: -4265.28, Validation Loss: -10561.85\n",
-      "Epoch 172, Iters 21625, Training Loss: -5598.06, Validation Loss: -10805.88\n",
-      "Epoch 173, Iters 21750, Training Loss: -4305.15, Validation Loss: -9403.62\n",
-      "Epoch 174, Iters 21875, Training Loss: -3585.68, Validation Loss: -10925.84\n",
-      "Epoch 175, Iters 22000, Training Loss: -4254.70, Validation Loss: -10552.81\n",
-      "Epoch 176, Iters 22125, Training Loss: -4884.65, Validation Loss: -10753.81\n",
-      "Epoch 177, Iters 22250, Training Loss: -1916.31, Validation Loss: -8229.12\n",
-      "Epoch 178, Iters 22375, Training Loss: -1932.87, Validation Loss: -10716.22\n",
-      "Epoch 179, Iters 22500, Training Loss: -4584.74, Validation Loss: -10290.58\n",
-      "Epoch 180, Iters 22625, Training Loss: -5762.88, Validation Loss: -10732.78\n",
-      "Epoch 181, Iters 22750, Training Loss: -4395.67, Validation Loss: -11104.49\n",
-      "Epoch 182, Iters 22875, Training Loss: -4.85, Validation Loss: -11025.12\n",
-      "Epoch 183, Iters 23000, Training Loss: -3930.27, Validation Loss: -11022.41\n",
-      "Epoch 184, Iters 23125, Training Loss: -1729.57, Validation Loss: -10530.12\n",
-      "Epoch 185, Iters 23250, Training Loss: -803.18, Validation Loss: -10786.70\n",
-      "Epoch 186, Iters 23375, Training Loss: -6080.16, Validation Loss: -11037.95\n",
-      "Epoch 187, Iters 23500, Training Loss: -5974.39, Validation Loss: -10974.69\n",
-      "Epoch 188, Iters 23625, Training Loss: -4921.30, Validation Loss: -9672.46\n",
-      "Epoch 189, Iters 23750, Training Loss: -752.68, Validation Loss: -10329.68\n",
-      "Epoch 190, Iters 23875, Training Loss: -1747.93, Validation Loss: -10224.98\n",
-      "Epoch 191, Iters 24000, Training Loss: -4734.69, Validation Loss: -11114.68\n",
-      "Epoch 192, Iters 24125, Training Loss: -6529.19, Validation Loss: -10858.91\n",
-      "Epoch 193, Iters 24250, Training Loss: -5436.76, Validation Loss: -11058.84\n",
-      "Epoch 194, Iters 24375, Training Loss: -273.06, Validation Loss: -10684.44\n",
-      "Epoch 195, Iters 24500, Training Loss: -5157.25, Validation Loss: -11152.68\n",
-      "Epoch 196, Iters 24625, Training Loss: -2617.05, Validation Loss: -10813.55\n",
-      "Epoch 197, Iters 24750, Training Loss: -4019.63, Validation Loss: -10421.77\n",
-      "Epoch 198, Iters 24875, Training Loss: -6154.61, Validation Loss: -11071.55\n",
-      "Epoch 199, Iters 25000, Training Loss: -1005.31, Validation Loss: -9732.00\n",
+      "Early stopping at iters 12875\n",
+      "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 281.81 sec.\n"
+      "The training time is 141.16 sec.\n"
      ]
     }
    ],
@@ -1051,7 +956,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 168.22it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 323.58it/s]\n"
      ]
     },
     {
@@ -1060,14 +965,14 @@
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
       "count     10.000000         10.000000     10.000000\n",
-      "mean  -11333.951053          2.676047      0.003862\n",
-      "std       18.172082          0.015114      0.000707\n",
-      "min   -11359.429729          2.655293      0.003012\n",
-      "25%   -11350.034075          2.663533      0.003518\n",
-      "50%   -11331.907742          2.673794      0.003676\n",
-      "75%   -11320.323254          2.689656      0.004097\n",
-      "max   -11306.742206          2.698342      0.005028\n",
-      "Total elapsed time for optimization: 0.04 seconds\n",
+      "mean  -10566.402296          0.673331      0.002289\n",
+      "std        4.011930          0.000684      0.000445\n",
+      "min   -10570.084228          0.672636      0.001999\n",
+      "25%   -10569.395792          0.673049      0.002000\n",
+      "50%   -10567.979627          0.673206      0.002004\n",
+      "75%   -10563.954047          0.673329      0.002506\n",
+      "max   -10559.074251          0.675113      0.003358\n",
+      "Total elapsed time for optimization: 0.02 seconds\n",
       "Number of infeasible solution: 10\n"
      ]
     }
@@ -1237,7 +1142,7 @@
       "Early stopping at iters 8500\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 106.14 sec.\n"
+      "The training time is 100.43 sec.\n"
      ]
     }
    ],
@@ -1264,7 +1169,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 189.65it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 10/10 [00:00<00:00, 189.51it/s]\n"
      ]
     },
     {
@@ -1273,13 +1178,13 @@
      "text": [
       "          Obj Val  Constraints Viol  Elapsed Time\n",
       "count   10.000000         10.000000     10.000000\n",
-      "mean  -312.363269        127.734721      0.003879\n",
-      "std     50.710645         19.449343      0.000815\n",
-      "min   -386.408176        106.318130      0.002999\n",
-      "25%   -339.847469        115.801147      0.003105\n",
-      "50%   -318.915877        120.883945      0.003754\n",
-      "75%   -267.270809        141.723131      0.004454\n",
-      "max   -243.263057        160.700272      0.005169\n",
+      "mean  -312.363269        127.732993      0.003723\n",
+      "std     50.710645         19.449147      0.000801\n",
+      "min   -386.408176        106.316582      0.003000\n",
+      "25%   -339.847469        115.799576      0.003062\n",
+      "50%   -318.915877        120.882301      0.003394\n",
+      "75%   -267.270809        141.721272      0.004121\n",
+      "max   -243.263057        160.698212      0.005256\n",
       "Total elapsed time for optimization: 0.04 seconds\n",
       "Number of infeasible solution: 10\n"
      ]
